@@ -59,6 +59,8 @@ public class OffsetManager
 		virtualLineCounts = new int[8];
 		for(int i = 0; i < 8; i++)
 			virtualLineCounts[i] = 1;
+
+		gapLine = -1;
 	} //}}}
 
 	//{{{ getLineCount() method
@@ -121,12 +123,19 @@ public class OffsetManager
 	//{{{ getLineEndOffset() method
 	public final int getLineEndOffset(int line)
 	{
-		return (int)(lineInfo[line] & END_MASK);
+		int end = (int)(lineInfo[line] & END_MASK);
+		if(gapLine != -1 && line >= gapLine)
+			return end + gapWidth;
+		else
+			return end;
 	} //}}}
 
 	//{{{ isFoldLevelValid() method
 	public final boolean isFoldLevelValid(int line)
 	{
+		if(gapLine != -1 && line >= gapLine)
+			return false;
+
 		return (lineInfo[line] & FOLD_LEVEL_VALID_MASK) != 0;
 	} //}}}
 
@@ -141,6 +150,9 @@ public class OffsetManager
 	// Also sets 'fold level valid' flag
 	public final void setFoldLevel(int line, int level)
 	{
+		if(gapLine != -1 && line >= gapLine)
+			moveGap(line + 1,0);
+
 		lineInfo[line] = ((lineInfo[line] & ~FOLD_LEVEL_MASK)
 			| ((long)level << FOLD_LEVEL_SHIFT)
 			| FOLD_LEVEL_VALID_MASK);
@@ -163,6 +175,8 @@ public class OffsetManager
 			lineInfo[line] = (lineInfo[line] & ~mask);
 	} //}}}
 
+	// the next two methods are not used!
+
 	//{{{ getScreenLineCount() method
 	public final int getScreenLineCount(int line)
 	{
@@ -180,6 +194,9 @@ public class OffsetManager
 	//{{{ isLineContextValid() method
 	public final boolean isLineContextValid(int line)
 	{
+		if(gapLine != -1 && line >= gapLine)
+			return false;
+
 		return (lineInfo[line] & CONTEXT_VALID_MASK) != 0;
 	} //}}}
 
@@ -193,6 +210,9 @@ public class OffsetManager
 	// Also sets 'context valid' to true
 	public final void setLineContext(int line, TokenMarker.LineContext context)
 	{
+		if(gapLine != -1 && line >= gapLine)
+			moveGap(line + 1,0);
+
 		lineContext[line] = context;
 		lineInfo[line] |= CONTEXT_VALID_MASK;
 	} //}}}
@@ -291,6 +311,8 @@ public class OffsetManager
 		//{{{ Update line info and line context arrays
 		if(numLines > 0)
 		{
+			moveGap(-1,0);
+
 			lineCount += numLines;
 
 			if(lineInfo.length <= lineCount)
@@ -332,9 +354,9 @@ public class OffsetManager
 			{
 				// need the line end offset to be in place
 				// for following fold level calculations
-				lineInfo[startLine + i] = (((offset + endOffsets.get(i) + 1)
-					& ~(FOLD_LEVEL_VALID_MASK | CONTEXT_VALID_MASK))
-					| visible);
+				lineInfo[startLine + i] = (offset
+					+ endOffsets.get(i) + 1)
+					| visible;
 			}
 
 			//{{{ Unrolled
@@ -356,11 +378,13 @@ public class OffsetManager
 				virtualLineCounts[7] += numLines;
 			//}}}
 		} //}}}
+
 		//{{{ Update remaining line start offsets
-		for(int i = endLine; i < lineCount; i++)
+		moveGap(endLine,length);
+		/* for(int i = endLine; i < lineCount; i++)
 		{
 			setLineEndOffset(i,getLineEndOffset(i) + length);
-		} //}}}
+		} */ //}}}
 
 		updatePositionsForInsert(offset,length);
 	} //}}}
@@ -396,6 +420,8 @@ public class OffsetManager
 		//{{{ Update line info and line context arrays
 		if(numLines > 0)
 		{
+			moveGap(-1,0);
+
 			lineCount -= numLines;
 			System.arraycopy(lineInfo,startLine + numLines,lineInfo,
 				startLine,lineCount - startLine);
@@ -404,10 +430,11 @@ public class OffsetManager
 		} //}}}
 
 		//{{{ Update remaining line start offsets
-		for(int i = startLine; i < lineCount; i++)
+		moveGap(startLine,-length);
+		/* for(int i = startLine; i < lineCount; i++)
 		{
 			setLineEndOffset(i,getLineEndOffset(i) - length);
-		} //}}}
+		} */ //}}}
 
 		updatePositionsForRemove(offset,length);
 	} //}}}
@@ -415,12 +442,7 @@ public class OffsetManager
 	//{{{ lineInfoChangedFrom() method
 	public void lineInfoChangedFrom(int startLine)
 	{
-		for(int i = startLine; i < lineCount; i++)
-		{
-			lineInfo[i] &= ~(FOLD_LEVEL_VALID_MASK
-				| CONTEXT_VALID_MASK);
-			lineContext[i] = null;
-		}
+		moveGap(startLine,0);
 	} //}}}
 
 	//{{{ Private members
@@ -466,6 +488,14 @@ public class OffsetManager
 	private int positionCount;
 
 	private int[] virtualLineCounts;
+
+	/**
+	 * If -1, then there is no gap.
+	 * Otherwise, all lines from this line onwards need to have gapWidth
+	 * added to their end offsets.
+	 */
+	private int gapLine;
+	private int gapWidth;
 	//}}}
 
 	//{{{ setLineEndOffset() method
@@ -473,6 +503,36 @@ public class OffsetManager
 	{
 		lineInfo[line] = ((lineInfo[line] & ~(END_MASK
 			| FOLD_LEVEL_VALID_MASK | CONTEXT_VALID_MASK)) | end);
+	} //}}}
+
+	//{{{ moveGap() method
+	private final void moveGap(int newGapLine, int newGapWidth)
+	{
+		//System.err.println(buffer.getName() + ": Moving gap from "
+		//	+ gapLine + " to " + newGapLine);
+
+		if(gapLine == -1)
+			gapWidth = newGapWidth;
+		// this handles the newGapLine == -1 case correctly!
+		else if(newGapLine < gapLine)
+		{
+			for(int i = gapLine; i < lineCount; i++)
+				setLineEndOffset(i,getLineEndOffset(i));
+
+			gapWidth = newGapWidth;
+		}
+		else //if(newGapLine >= gapLine)
+		{
+			for(int i = gapLine; i < newGapLine; i++)
+				setLineEndOffset(i,getLineEndOffset(i));
+
+			gapWidth += newGapWidth;
+		}
+
+		if(newGapLine == lineCount)
+			gapLine = -1;
+		else
+			gapLine = newGapLine;
 	} //}}}
 
 	//{{{ growPositionArray() method
